Prevent overflow of surveys with very long names

--- a/less/trafficlight.less
+++ b/less/trafficlight.less
@@ -251,6 +251,8 @@ div.loading {
                 margin: 0;
             }
             .zpitem {
+		word-wrap: break-word;
+		    
                 a { color: @brand-primary; }
                 p {
                     margin: 0 0 0 0 !important;
